--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <section class="hidden">
             <h1 class="hidden">EQUIPE DEV</h1>
             <div class="equipe">
-                <div class="team-photo">
+                <div class="team-photo" data-name="Kenteni" data-role="Desenvolvedor" data-description="" data-img="Imgs/kenteni.jpg">
                     <img src="Imgs/kenteni.jpg" alt="kenteni" class="hidden">
                 </div>
                 <div class="team-photo">
@@ -80,10 +80,10 @@
             <h1 class="hidden">DOCUMENTAÇÃO</h1>
             <div class="equipe">
                 <div class="team-photo">
-                    <img src="" alt="">
+                    <img src="./Imgs/gabriely.png" alt="gabriely">
                 </div>
                 <div class="team-photo">
-                    <img src="" alt="">
+                    <img src="./Imgs/quézia.png" alt="quézia">
                 </div>
             </div>
 
