--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="home">
             <div class="hometxt">
                 <h1 class="homeh1">CONHEÇA A NOSTRA NEXUS</h1>
-                <h5 class="homeh5">A NOSTRA NEXUS, se estabeleceu com um propósito certeiro/claro:provar que<br>
-                    tecnologia e meio ambiente são parceiros de revolução!Então, preparados para<br>
+                <h5 class="homeh5">A NOSTRA NEXUS, se estabeleceu com um propósito certeiro: provar que<br>
+                    tecnologia e meio ambiente são parceiros de revolução! Então, preparados para<br>
                     mudar a forma como você enxerga a tecnologia no planeta?</h5>
                 <button class="homebotao"><a href="#">SAIBA MAIS</a></button>
             </div>
